Anonymous | Login | 2019-12-11 00:01 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0027960 | Community | [OCCT] OCCT:Configuration | public | 2016-10-13 14:50 | 2016-12-09 16:38 | ||||
Reporter | BenjaminBihler | ||||||||
Assigned To | apn | ||||||||
Priority | normal | Severity | trivial | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | MinGw-w64 | OS | Windows | OS Version | |||||
Product Version | [OCCT] 7.1.0 | ||||||||
Target Version | [OCCT] 7.1.0 | Fixed in Version | [OCCT] 7.1.0 | ||||||
Summary | 0027960: Configuration - fix compilation of OSD_Directory with MinGW-w64 | ||||||||
Description | Compilation fails since commit fb0b05319f52b12ba581e70f561234fe582c3dc3. The error message is: D:/OpenCascade/Occt/src/OSD/OSD_Directory.cxx:181:72: error: conversion from 'const wchar_t*' to 'const TCollection_ExtendedString' is ambiguous OSD_Path dirPath (TCollection_AsciiString (aName != NULL ? aName : L"")); ^ and similar. | ||||||||
Steps To Reproduce | @echo OFF set "aCasSrc=%~dp0" set aNbJobs=%NUMBER_OF_PROCESSORS% call c:\TDM-GCC-64\mingwvars.bat set "PATH=c:\CMake\bin;%PATH%" set "aFreeType=c:/3rdparty-mingw64/freetype-2.6.3-mingw-64" set "aFreeImage=c:/3rdparty-mingw64/freeimage-3.17-0-mingw-64" set "aTclTk=C:/3rdparty-mingw64/tcltk-8.6.4-mingw-64" call :cmakeGenerate pause goto :eof :cmakeGenerate set "aPlatformAndCompiler=mingw64" set "aWorkDir=work\%aPlatformAndCompiler%-make" set "aLogFile=%~dp0build-%aPlatformAndCompiler%.log" if not exist "%aWorkDir%" ( mkdir "%aWorkDir%" ) if exist "%aLogFile%" ( del "%aLogFile%" ) pushd "%aWorkDir%" set STARTTIME=%TIME% echo Configuring OCCT for %aPlatformAndCompiler%... cmake -G "MinGW Makefiles" ^ -D CMAKE_BUILD_TYPE:STRING="Release" ^ -D BUILD_LIBRARY_TYPE:STRING="Shared" ^ -D INSTALL_DIR:PATH="%~dp0work/%aPlatformAndCompiler%" ^ -D INSTALL_DIR_INCLUDE:STRING="inc" ^ -D INSTALL_DIR_LIB:STRING="libs/%anAbi%" ^ -D INSTALL_DIR_RESOURCE:STRING="src" ^ -D 3RDPARTY_FREETYPE_DIR:PATH="%aFreeType%" ^ -D 3RDPARTY_FREETYPE_INCLUDE_DIR_freetype2:FILEPATH="%aFreeType%/include" ^ -D 3RDPARTY_FREETYPE_INCLUDE_DIR_ft2build:FILEPATH="%aFreeType%/include" ^ -D 3RDPARTY_FREETYPE_LIBRARY_DIR:PATH="%aFreeType%/lib" ^ -D 3RDPARTY_FREEIMAGE_DIR:PATH="%aFreeImage%" ^ -D 3RDPARTY_FREEIMAGE_DLL:FILEPATH="%aFreeImage%/bin/FreeImage.dll" ^ -D 3RDPARTY_FREEIMAGE_DLL_DIR:PATH="%aFreeImage%/bin" ^ -D 3RDPARTY_FREEIMAGE_INCLUDE_DIR:PATH="%aFreeImage%/include" ^ -D 3RDPARTY_FREEIMAGE_LIBRARY:FILEPATH="%aFreeImage%/lib/libFreeImage.a" ^ -D 3RDPARTY_FREEIMAGE_LIBRARY_DIR:PATH="%aFreeImage%/lib" ^ -D 3RDPARTY_TCL_DIR:PATH="%aTclTk%" ^ -D 3RDPARTY_TCL_DLL:FILEPATH="%aTclTk%/bin/tcl86.dll" ^ -D 3RDPARTY_TCL_DLL_DIR:FILEPATH="%aTclTk%/bin" ^ -D 3RDPARTY_TCL_INCLUDE_DIR:FILEPATH="%aTclTk%/include" ^ -D 3RDPARTY_TCL_LIBRARY:FILEPATH="%aTclTk%/lib/libtcl86.a" ^ -D 3RDPARTY_TCL_LIBRARY_DIR:FILEPATH="%aTclTk%/lib" ^ -D 3RDPARTY_TK_DIR:PATH="%aTclTk%" ^ -D 3RDPARTY_TK_DLL:FILEPATH="%aTclTk%/bin/tk86.dll" ^ -D 3RDPARTY_TK_DLL_DIR:FILEPATH="%aTclTk%/bin" ^ -D 3RDPARTY_TK_INCLUDE_DIR:FILEPATH="%aTclTk%/include" ^ -D 3RDPARTY_TK_LIBRARY:FILEPATH="%aTclTk%/lib/libtk86.a" ^ -D 3RDPARTY_TK_LIBRARY_DIR:FILEPATH="%aTclTk%/lib" ^ "%aCasSrc%" if errorlevel 1 ( popd pause exit /B goto :eof ) mingw32-make clean echo Building OCCT... mingw32-make -j %aNbJobs% 2>> %aLogFile% type %aLogFile% if errorlevel 1 ( popd pause exit /B goto :eof ) echo Installing OCCT into %~dp0work/%aPlatformAndCompiler%... mingw32-make install 2>> %aLogFile% set ENDTIME=%TIME% rem handle time before 10AM (win10 - remove empty space at the beginning) if "%STARTTIME:~0,1%"==" " set "STARTTIME=%STARTTIME:~1%" if "%ENDTIME:~0,1%"==" " set "ENDTIME=%ENDTIME:~1%" rem handle time before 10AM (win7 - add 0 at the beginning) if "%STARTTIME:~1,1%"==":" set "STARTTIME=0%STARTTIME%" if "%ENDTIME:~1,1%"==":" set "ENDTIME=0%ENDTIME%" rem convert hours:minutes:seconds:ms into duration set /A STARTTIME=(1%STARTTIME:~0,2%-100)*360000 + (1%STARTTIME:~3,2%-100)*6000 + (1%STARTTIME:~6,2%-100)*100 + (1%STARTTIME:~9,2%-100) set /A ENDTIME= (1%ENDTIME:~0,2%-100)*360000 + (1%ENDTIME:~3,2%-100)*6000 + (1%ENDTIME:~6,2%-100)*100 + (1%ENDTIME:~9,2%-100) set /A DURATION=%ENDTIME%-%STARTTIME% if %ENDTIME% LSS %STARTTIME% set set /A DURATION=%STARTTIME%-%ENDTIME% set /A DURATIONH=%DURATION% / 360000 set /A DURATIONM=(%DURATION% - %DURATIONH%*360000) / 6000 set /A DURATIONS=(%DURATION% - %DURATIONH%*360000 - %DURATIONM%*6000) / 100 if %DURATIONH% LSS 10 set DURATIONH=0%DURATIONH% if %DURATIONM% LSS 10 set DURATIONM=0%DURATIONM% if %DURATIONS% LSS 10 set DURATIONS=0%DURATIONS% echo Building time: %DURATIONH%:%DURATIONM%:%DURATIONS% for %anAbi% echo Building time: %DURATIONH%:%DURATIONM%:%DURATIONS% >> %aLogFile% popd goto :eof | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | |||||||||
![]() |
|||||||
|
![]() |
|
(0058694) git (administrator) 2016-10-13 20:22 |
Branch CR27960 has been created by kgv. SHA-1: f19400c1cb23300f580828079a2f6bc2bcac78dd Detailed log of new commits: Author: kgv Date: Thu Oct 13 20:22:27 2016 +0300 0027960: Configuration - fix compilation of OSD_Directory with MinGW-w64 Check _NATIVE_WCHAR_T_DEFINED only within _MSC_VER since it is msvc-specific. |
(0058695) kgv (developer) 2016-10-13 20:26 |
Please check building on supported platforms, regression testing is not needed. |
(0059007) git (administrator) 2016-10-24 12:00 |
Branch CR27960 has been updated forcibly by kgv. SHA-1: 4b9876f42eb0488b063edab94d88e4122d68dc20 |
(0059234) apn (administrator) 2016-10-27 11:30 edited on: 2016-10-27 11:30 |
Dear BugMaster, Branch CR27960 from occt git-repository (and master from products git-repository) was compiled on all supported platforms. SHA-1: 4b9876f42eb0488b063edab94d88e4122d68dc20 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 63 (63 on master) Windows: 0 (0 on master) |
(0059416) git (administrator) 2016-10-28 21:37 |
Branch CR27960 has been deleted by kgv. SHA-1: 4b9876f42eb0488b063edab94d88e4122d68dc20 |
![]() |
|||
occt: master 15173be5
Timestamp: 2016-10-13 17:22:27 Author: kgv Committer: apn [ Details ] [ Diff ] |
0027960: Configuration - fix compilation of OSD_Directory with MinGW-w64 Check _NATIVE_WCHAR_T_DEFINED only within _MSC_VER since it is msvc-specific. |
||
mod - src/NCollection/NCollection_UtfString.hxx | [ Diff ] [ File ] | ||
mod - src/NCollection/NCollection_UtfString.lxx | [ Diff ] [ File ] | ||
mod - src/TCollection/TCollection_AsciiString.hxx | [ Diff ] [ File ] | ||
mod - src/TCollection/TCollection_ExtendedString.hxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2016-10-13 14:50 | BenjaminBihler | New Issue | |
2016-10-13 14:50 | BenjaminBihler | Assigned To | => abv |
2016-10-13 14:50 | BenjaminBihler | Relationship added | related to 0027838 |
2016-10-13 15:47 | kgv | Assigned To | abv => kgv |
2016-10-13 15:48 | kgv | Category | OCCT:Foundation Classes => OCCT:Configuration |
2016-10-13 15:48 | kgv | Product Version | => 7.1.0 |
2016-10-13 15:48 | kgv | Summary | Compilation with MinGw-w64 fails => Configuration - fix compilation of OSD_Directory with MinGW-w64 |
2016-10-13 20:22 | git | Note Added: 0058694 | |
2016-10-13 20:25 | kgv | Steps to Reproduce Updated | View Revisions |
2016-10-13 20:26 | kgv | Note Added: 0058695 | |
2016-10-13 20:26 | kgv | Assigned To | kgv => bugmaster |
2016-10-13 20:26 | kgv | Severity | minor => trivial |
2016-10-13 20:26 | kgv | Status | new => resolved |
2016-10-13 20:26 | kgv | Status | resolved => reviewed |
2016-10-24 12:00 | git | Note Added: 0059007 | |
2016-10-27 11:30 | apn | Note Added: 0059234 | |
2016-10-27 11:30 | apn | Note Edited: 0059234 | View Revisions |
2016-10-27 11:31 | apn | Test case number | => Not needed |
2016-10-27 11:31 | apn | Status | reviewed => tested |
2016-10-28 14:35 | apn | Changeset attached | => occt master 15173be5 |
2016-10-28 14:35 | apn | Assigned To | bugmaster => apn |
2016-10-28 14:35 | apn | Status | tested => verified |
2016-10-28 14:35 | apn | Resolution | open => fixed |
2016-10-28 21:37 | git | Note Added: 0059416 | |
2016-12-09 16:30 | aiv | Status | verified => closed |
2016-12-09 16:38 | aiv | Fixed in Version | => 7.1.0 |
Copyright © 2000 - 2019 MantisBT Team |