0027960: Configuration - fix compilation of OSD_Directory with MinGW-w64

Check _NATIVE_WCHAR_T_DEFINED only within _MSC_VER since it is msvc-specific.